--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
   <title>Flexbox Code Along</title>
 </head>
 <body>
-
-  <!--Our first flex container-->
-  <div class="flex-container">
-    <header></header>
-    <main>
-
+1
+  <!--Our first flex con1tainer-->
+  <div class="flex-conta1iner">
+    <header></header>1
+    <main>1
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
+      <div class="item">5</div>
+      <div class="item">6</div>
     </main>
     <footer></footer>
   </div>
