--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 1
   <!--Our first flex con1tainer-->
   <div class="flex-conta1iner">
-    <header></header>1
-    <main>1
+    <header></header>
+    <main>
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
