Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Flexbox Code Along</title>
 </head>
 <body>
-1
-  <!--Our first flex con1tainer-->
-  <div class="flex-conta1iner">
+
+  <!--Our first flex container-->
+  <div class="flex-container">
     <header></header>
     <main>
       <div class="item">1</div>
